# jetmax_gazebo

./: README.md
jetmax_control/: CMakeLists.txt  package.xml
jetmax_control/config/: controllers.yaml  jetmax.rviz
jetmax_control/launch/: jetmax_control.launch
jetmax_control/launch/inc/: jetmax_spawner.xml  red_box_spawner.xml  robot_control.xml
jetmax_control/scripts/: go_home.py  jetmax_fk.py  jetmax_ik.py  jetmax_kinematics.py  moving.py
jetmax_control/srv/: FK.srv
jetmax_description/: CMakeLists.txt  README.md  package.xml
jetmax_description/launch/: jetmax_description.xml  jetmax_spawner.xml  world.launch
jetmax_description/meshes/: Base.STL  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  Link9.STL  Suction.STL
jetmax_description/urdf/: jetmax.gazebo  jetmax.xacro  jetmax_joints.xml  jetmax_trans.xml  red_box.xacro
jetmax_description/world/: empty.world
