<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>jetmax_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for jetmax</p>
    <p>This package contains configuration data, 3D models and launch files for jetmax_description robot</p>
  </description>
  <author>Lucas Lu</author>
  <maintainer email="lyplucas@foxmail.com"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent />
  </export>
</package>